Fix/show more box (#349)
* add truncate method

* fix up summary list

* update component

* update snapshots

* satisfy prettier

* fix prettier

* preserve newlines

--- a/components/ShowMoreBox/ShowMoreBox.module.scss
+++ b/components/ShowMoreBox/ShowMoreBox.module.scss
@@ -1,11 +1,22 @@
-.container {
-  transition: ease 100ms;
-  overflow: hidden;
-  & > div {
-    overflow: auto;
+.outer {
+  p:first-child {
+    margin-top: 0;
+  }
+  p:last-of-type {
+    margin-bottom: 0;
   }
 }
 
-.trigger {
-  text-align: left;
+.button {
+  margin-top: 10px;
+  display: block;
+  padding: 0;
+
+  svg {
+    margin-right: 7px;
+  }
+
+  &[aria-expanded='true'] svg {
+    transform: rotate(180deg);
+  }
 }
